# tiny_rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc  main.cpp
.VSCodeCounter/2021-11-18_12-46-34/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-12-02_16-07-01/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-12-03_21-36-50/: details.md  results.csv  results.md  results.txt
assets/: README.md
assets/mug/: teamug.mtl
assets/rem/: Rem.mtl
assets/shoe/: Black_shoe.mtl
assets/tree/: 12150_Christmas_Tree_V2_L2.mtl
benchmark/: BenchMain.cpp  MathBench.hpp
benchmark/results/: master-7d620eb.txt  master-f97e566.txt
cmake/: Utility.cmake
graphics/: Viewer.hpp  macos.mm  platform.h
lib/: OBJ_Loader.h  tga.cpp  tga.hpp
rasterizer/: Camera.hpp  Light.hpp  Material.hpp  Math.cpp  Math.hpp  Mesh.hpp  Model.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Triangle.hpp
rasterizer/math_arch/: MathNeon.cpp
rasterizer/scenes/: SceneManager.cpp  SceneManager.hpp
src/: main.cc
utils/: GitHelper.hpp  GitHelper.hpp.in  Measure.cpp  Measure.hpp  ObjParser.hpp
window/: Window.hpp
